# CrabBot

./: .gitignore  CrabBot.py  INSTALL.md  LICENSE  README.md  README.rst  TODO.md  __main__.py  convert_quotes_json_to_sqlite.py  crabbot.py  crabbotmessages.py  crabbotvoice.py  pyproject.toml  run.py  setup.py
assets/: adventure-deaths.txt  adventure-killers.txt  adventure-locations.txt  adventure-rewards.txt  band-adjectives.txt  band-genres.txt  band-nouns.txt  band-places.txt  band-style.txt  band-styles.txt  cakes.txt  mobas.txt  sir-places.txt
assets/memes/: README.md  filelist.txt
assets/messages/: adventure-deaths.txt  adventure-killers.txt  adventure-locations.txt  band-adjectives.txt  band-nouns.txt  band-places.txt  cakes.txt  sir-places.txt  world-words.txt
crabbot/: __init__.py  __main__.py  common.py  messages.py  voice.py
crabbot/assets/memes/: filelist.txt
crabbot/assets/messages/: adventure-deaths.txt  band-nouns.txt  band-styles.txt  newthing-words.txt  world-words.txt
crabbot/cogs/: messages.py  old-voice.py  quotes.py  voice.py
